fixed the break in header

--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ and for the li, the ul padding made it
 
 #nav_bottom > ul li {
   display: inline;
-  padding: 15px 42px 15px 0px;
-                            /*adjust as needed you needed
+  padding: 15px 47.2px 15px 0px;
+                              /*adjust as needed you needed
 padding here and in the ul hope this works*/
   /*margin-right: 25px; margin is not needed when trying to push out from the inside :)*/
   border-right: 1px solid #9a9a9a; }
@@ -97,7 +97,7 @@ padding here and in the ul hope this works*/
 
 .float_right > a > img {
   margin-top: 3px;
-  padding-bottom: 1px;
+  padding-bottom: 1.5px;
   border-bottom: 1px solid #9a9a9a; }
 
 .border {
